--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,11 +12,36 @@ dependencies:
   flutter_svg: ^2.0.10+1
   google_fonts: ^6.2.1
   carousel_slider: ^4.2.1
+  dotted_border: ^2.1.0
+  image_picker: ^1.1.2
+  flutter_bloc: ^8.1.6
+  bloc: ^8.1.4
+
+  freezed_annotation: ^2.4.4
+  get_it: ^7.7.0
+  injectable: ^2.4.2
+  injectable_generator: ^2.6.1
+  uuid: ^4.4.2
+  gap: ^3.0.1
+  table_calendar: ^3.1.2
+  flutter_time_picker_spinner: ^2.0.0
+  intl: ^0.19.0
+  hooks_riverpod: ^2.5.1
+  flutter_hooks: ^0.20.5
+  riverpod_annotation: ^2.3.5
+  json_annotation: ^4.9.0
+  easy_date_timeline: ^1.1.3
+  simple_horizontal_calendar: ^0.0.2
+  timeline_tile: ^2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.11
+  riverpod_generator: ^2.4.2
+  freezed: ^2.5.7
+  json_serializable: ^6.8.0
 flutter:
   uses-material-design: true
 
