--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   easy_date_timeline: ^1.1.3
   simple_horizontal_calendar: ^0.0.2
   timeline_tile: ^2.0.0
+  flutter_staggered_grid_view: ^0.7.0
+  flutter_switch: ^0.3.2
 
 dev_dependencies:
   flutter_test:
