--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
   timeline_tile: ^2.0.0
   flutter_staggered_grid_view: ^0.7.0
   flutter_switch: ^0.3.2
+  permission_handler: ^11.3.1
+  in_app_review: ^2.0.9
+  flutter_local_notifications: ^17.2.1+2
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
